--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 						<article class="blog-content">
 							<h2><a href="blog.html">Learn how to make calculator in C</a></h2>
 							<div class="blog-meta">By souvik | April 10, 2020 | 0 Comments</div>
-							<p>to understand how c programming work's read my other blog . to make a working calculator we have to ...</p>
+							<p>to understand how c programming work's read my other blog . to make a working calculator we have to understand what is c program basic & then you shouls try to understand the operator </p>
 							<a href="blog.html" class="read-more">Read More</a>
 						</article>
 					</div>
@@ -569,9 +569,9 @@
 							<a href="blog.html"><img src="img/blog/2.jpg" alt=""></a>
 						</figure>
 						<article class="blog-content">
-							<h2><a href="blog.html">Bill Gates warns that a coronavirus-like outbreak will probably happen 'every 20 years or so'</a></h2>
-							<div class="blog-meta">By sourav | 3 hours ago, today | 5 Comments</div>
-							<p>Speaking to the Financial Times earlier this month, Gates said that COVID-19 was the "biggest event that people will experience in their entire lives" and said world leaders and global policymakers have..."</p>
+							<h2><a href="blog.html">Bill Gates warns that a coronavirus-like outbreak</a></h2>
+							<div class="blog-meta">By sourav | 1 day ago, april 10 | 6 Comments</div>
+							<p>Speaking to the Financial Times earlier this month, Gates said that COVID-19 was the "biggest event that people will experience in their entire lives" and said world..."</p>
 							<a href="blog.html" class="read-more">Read More</a>
 						</article>
 					</div>
@@ -585,8 +585,7 @@
 						<article class="blog-content">
 							<h2><a href="blog.html">Top 10 Developer Tools You Didn't Know You Needed</a></h2>
 							<div class="blog-meta">By souvik | March 29 2020 | 10 Comments | 5 like </div>
-							<p>Your master guide to become a professional model web developer in Mac:
-								There are my 'Must have' programming tools. They are universally applicable: you will absolutely...</p>
+							<p>Your master guide to become a professional model web developer in Mac: There are my 'Must have' programming tools. They are universally applicable: you will absolutely...</p>
 							<a href="blog.html" class="read-more">Read More</a>
 						</article>
 					</div>
