--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 						<article class="blog-content">
 							<h2><a href="blog.html">Learn how to make calculator in C</a></h2>
 							<div class="blog-meta">By souvik | April 10, 2020 | 0 Comments</div>
-							<p>to understand how c programming work's read my other blog . to make a working calculator we have to understand what is c program basic & then you shouls try to understand the operator </p>
+							<p>to understand how c programming work's read my other blog . to make a working calculator we have to understand what is c program basic & then you should...</p>
 							<a href="blog.html" class="read-more">Read More</a>
 						</article>
 					</div>
@@ -585,7 +585,7 @@
 						<article class="blog-content">
 							<h2><a href="blog.html">Top 10 Developer Tools You Didn't Know You Needed</a></h2>
 							<div class="blog-meta">By souvik | March 29 2020 | 10 Comments | 5 like </div>
-							<p>Your master guide to become a professional model web developer in Mac: There are my 'Must have' programming tools. They are universally applicable: you will absolutely...</p>
+							<p>Your master guide to become a professional model web developer in Mac: There are my 'Must have' programming tools. They are universally applicable:...</p>
 							<a href="blog.html" class="read-more">Read More</a>
 						</article>
 					</div>
